# StudyPlan

./: CLI.cpp  CLI.h  CMakeLists.txt  Course.cpp  Course.h  Semester.cpp  Semester.h  Student.cpp  Student.h  StudyPlan.cpp  StudyPlan.h  cgpacalc.cpp  cgpacalc.h  main  main.cpp  makefile
